# flask-task

./: .gitignore  README.md  app.db  config.py  pyproject.toml  shell.nix
app/: __init__.py
app/model/: Mail.py
app/routes/: Mail.py  __init__.py
app/service/: MailService.py
app/tasks/: celery_init.py
