[project]
name = "flask-task"
version = "0.1.0"
description = ""
authors = [
    {name = "sabiqazhar", email = "sabiqandazhar@gmail.com"},
]
dependencies = [
    "flask>=3.0.2",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Migrate>=4.0.5",
    "sqlalchemy>=2.0.27",
    "celery>=5.3.6",
    "Flask-Mail>=0.9.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
